manifests/deployment.yaml
# kubernetes deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: myappspace
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: regcred
      containers:
        - name: myapp
          image: "${TESTING_IMAGE}"
          readinessProbe:
            httpGet:
              path: /
              port: 80          
          livenessProbe:
            httpGet:
              path: /
              port: 80
          imagePullPolicy: Always
          securityContext:
            runAsUser: 10001
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault            
            capabilities:
              drop:
                - ALL            
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
